[GTK] Native key bindings of "Select All" is not respected in `<input>`
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox96 | --- | fixed |
People
(Reporter: masayuki, Assigned: masayuki)
References
Details
Attachments
(1 file)
We respect select-all signal, but it's not supported on GtkEntry widget. Perhaps, it should be respected if a key combination is not mapped to anything in GtkEntry, but it's mapped to select-all in GtkTextView.
| Assignee | ||
Comment 1•4 years ago
|
||
GtkEntry is used to check what editing or natvigation command is
mapped to every key combination when <input> has focus. However,
it does not support select-all signal, thus, Gecko does not respect
native shortcut key for "Select All".
This patch makes it try to check whether the given key combination is
mapped to "Select All" or not in GtkTextView widget which supports
select-all signal. Thus, we'll get consistent behavior between
<input> and <textarea> about "Select All".
| Assignee | ||
Comment 2•4 years ago
•
|
||
stransky: Could you review the patch? I'd like to land it in this cycle because bug 1376091 was landed in this cycle and some Linux users want to keep the traditional behavior (i.e., Alt-a being "Select All") with customizing GTK's shortcut key definition. Even though it's too late to change this behavior, but I'd like to land the new pref which is disabled by default.
Sorry for the delay.
Comment 5•4 years ago
|
||
| bugherder | ||
Description
•