Bug 1743339 - Make `NativeKeyBindings` for single line editor try the one for multiline editor too r=stransky

`GtkEntry` is used to check what editing or natvigation command is
mapped to every key combination when `<input>` has focus.  However,
it does not support `select-all` signal, thus, Gecko does not respect
native shortcut key for "Select All".

This patch makes it try to check whether the given key combination is
mapped to "Select All" or not in `GtkTextView` widget which supports
`select-all` signal.  Thus, we'll get consistent behavior between
`<input>` and `<textarea>` about "Select All".

Differential Revision: https://phabricator.services.mozilla.com/D132450